# sentinel

./: APPROACH.md  Cargo.toml  LICENSE  README.md
migrations/: 0001_events_table.sql
src/: config.rs  main.rs
src/agent/: agent.rs  mod.rs  models.rs  parser.rs
src/db/: error.rs  pg.rs  schema.sql
src/features/events/: controller.rs  mod.rs  repository.rs
src/messages/: bus.rs  collector.rs  event.rs  init.rs  mod.rs
src/messages/consumers/: detection.rs  mod.rs  reputation.rs  storage.rs
src/messages/detections/: mod.rs  ssh_bruteforce.rs
src/messages/rules/: brute_force.rs  mod.rs
src/routes/: ip.rs  mod.rs
src/routes/events/: controller.rs  mod.rs
src/routes/stats/: mod.rs  stat.rs
src/server/: events.rs  mod.rs  router.rs  server.rs  state.rs
src/utils/: paginate.rs
