[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel-async = {"0.9.2", features = ["postgres", "deadpool"] }
diesel = { version = "2.3.10", features = ["postgres"] }
regex = "1.12.4"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
