[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace"] }
reqwest = "0.13.4"
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "sqlx-toml",
  "ipnetwork",
] }
dotenvy = "0.15.7"
ipnetwork = { version = "0.21.1", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
